--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -13,9 +13,9 @@ p, ol, ul, td {
 }
 
 pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+  //background-color: #eee;
+  //padding: 10px;
+  //font-size: 11px;
 }
 
 a {
