--- a/app/views/static_pages/alignment.html.erb
+++ b/app/views/static_pages/alignment.html.erb
@@ -14,10 +14,10 @@
         <div class="labels">
             <table>
                 <tr>
-                    <td class="table_hdr"><span id="seqname_1">ABC</span></td>
-                    <td class="table_hdr"><span id="seqname_2">ABC</span></td>
-                    <td class="table_hdr"><span id="seqname_3">ABC</span></td>
-                    <td class="table_hdr"><span id="seqname_4">ABC</span></td>
+                    <td class="table_hdr"><span id="seqname_1">ABC</span><span class="panel_1_col">       </span></td>
+                    <td class="table_hdr"><span id="seqname_2">ABC</span><span class="panel_2_col">       </span></td>
+                    <td class="table_hdr"><span id="seqname_3">ABC</span><span class="panel_3_col">       </span></td>
+                    <td class="table_hdr"><span id="seqname_4">Result</span></td>
                 </tr>
             </table>
         </div>
