--- a/app/views/static_pages/alignment.html.erb
+++ b/app/views/static_pages/alignment.html.erb
@@ -61,20 +61,35 @@
                                     <div id="control_3" class="sequence">zzz</div>
                                 </div>
                                 <div id="col2_2_2_2_2_2_2">
-                                    <div id="result_panel" class="sequence"></div>
+                                    <div id="col2_2_2_2_2_2_2_1">
+                                        <div id="result_panel" class="sequence"></div>
+                                    </div>
+                                    <div id="col2_2_2_2_2_2_2_2">
+                                        <div id="control_4" class="sequence">www</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div id="footer">
+                <br/>
+                <br/>
+
+                <div id="save_txt">Save result</div>
+
+                <br/>
+                <br/>
+            </div>
+
+            <div id="result_box" class="hidden">
+                <div id="result_nuc" class="sequence">
+
+                </div>
+            </div>
         </div>
-
-        <br/>
-
-        <!--<div class="sequence">-->
-            <!--<%= render "layouts/exons" %>-->
-        <!--</div>-->
-        <br/>
     </div>
+
 </div>
