--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -209,6 +209,24 @@
 .exon_8 {
     background-color: #ff6347;
 }
+.exon_9 {
+    background-color: #00bfff;
+}
+.exon_10 {
+    background-color: #ffe4e1;
+}
+.exon_11 {
+    background-color: #7fffd4;
+}
+.exon_12 {
+    background-color: #b8860b;
+}
+.exon_13 {
+    background-color: #228b22;
+}
+.exon_15 {
+    background-color: #4b0082;
+}
 .no-exon {
     background-color: #ffffff;
 }
