--- a/app/views/static_pages/alignment.html.erb
+++ b/app/views/static_pages/alignment.html.erb
@@ -10,6 +10,7 @@
         Exon6 <span class="exon_6">                 </span>
         Exon7 <span class="exon_7">                 </span>
         <span id="diff_color"> Diff</span>
+        <span id="gene_select"> <a href="/alignments">Select</a></span>
         </div>
         <br/>
         <div class="labels">
