Refactor, saving changes

--- a/app/views/static_pages/alignment.html.erb
+++ b/app/views/static_pages/alignment.html.erb
@@ -2,6 +2,9 @@
 <div>
     <div class="header">
         <div class="exon">
+        <span id="gene_select"><a href="/alignments">Home</a></span>
+        <span id="diff_color"><a href="#">Diff</a></span>
+        <span id="save_changes"><a href="#">Save</a></span>
         Exon1 <span class="exon_1">                 </span>
         Exon2 <span class="exon_2">                 </span>
         Exon3 <span class="exon_3">                 </span>
@@ -9,8 +12,7 @@
         Exon5 <span class="exon_5">                 </span>
         Exon6 <span class="exon_6">                 </span>
         Exon7 <span class="exon_7">                 </span>
-        <span id="diff_color"> Diff</span>
-        <span id="gene_select"> <a href="/alignments">Select</a></span>
+
         </div>
         <br/>
         <div class="labels">
@@ -22,10 +24,10 @@
                     <td class="table_hdr"><span id="seqname_4">Result </span></td>
                 </tr>
                 <tr id="menu_line">
-                    <td class="table_hdr"><span id="orf1_col1">1 </span><span id="orf2_col1">2 </span> <span id="orf3_col1">3</span></td>
-                    <td class="table_hdr"><span id="orf1_col2">1 </span><span id="orf2_col2">2 </span> <span id="orf3_col2">3</span></td>
-                    <td class="table_hdr"><span id="orf1_col3">1 </span><span id="orf2_col3">2 </span> <span id="orf3_col3">3</span></td>
-                    <td class="table_hdr"><span id="orf1_result">1 </span><span id="orf2_result">2 </span> <span id="orf3_result">3</span><span id="save_txt"> S</span><span id="search_txt_result"> s</span></td>
+                    <td class="table_hdr"><span id="orf1_col1"><a href="#">1 </a></span><span id="orf2_col1"><a href="#">2 </a></span><span id="orf3_col1"><a href="#">3</a></span></td>
+                    <td class="table_hdr"><span id="orf1_col2"><a href="#">1 </a></span><span id="orf2_col2"><a href="#">2 </a></span><span id="orf3_col2"><a href="#">3</a></span></td>
+                    <td class="table_hdr"><span id="orf1_col3"><a href="#">1 </a></span><span id="orf2_col3"><a href="#">2 </a></span><span id="orf3_col3"><a href="#">3</a></span></td>
+                    <td class="table_hdr"><span id="orf1_col4"><a href="#">1 </a></span><span id="orf2_col4"><a href="#">2 </a></span><span id="orf3_col4"><a href="#">3 </a></span><span id="save_txt"><a href="#">S </a></span><span id="search_txt_result"><a href="#">s</a></span></td>
                 </tr>
             </table>
         </div>
