Add save and restore

--- a/app/views/alignments/_form.html.erb
+++ b/app/views/alignments/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.check_box :reverse %>
   </div>
   <div class="field">
-    <%= f.label :changes %><br />
-    <%= f.text_field :changes %>
+    <%= f.label :user_changes %><br />
+    <%= f.text_field :user_changes %>
   </div>
   <div class="actions">
     <%= f.submit %>
