--- a/app/views/static_pages/alignment.html.erb
+++ b/app/views/static_pages/alignment.html.erb
@@ -5,6 +5,7 @@
         <span id="gene_select"><a href="/alignments">Home</a></span>
         <span id="diff_color"><a href="#">Diff</a></span>
         <span id="save_changes"><a href="#">Save</a></span>
+        <span><%= @gene_name %></span>
         Exon1 <span class="exon_1">                 </span>
         Exon2 <span class="exon_2">                 </span>
         Exon3 <span class="exon_3">                 </span>
@@ -117,6 +118,7 @@
                 <div id="start_pos_2" val=""></div>
                 <div id="start_pos_3" val=""></div>
                 <div id="start_pos_4" val=""></div>
+                <div id="aln_id" val="<%= @aln_id %>"></div>
             </div>
         </div>
     </div>
